# ziltrix-sch-core

./: ### Phaistos Disc Structural Analysis via Xiltrix_251118_004642.docx  .gitignore  .pre-commit-config.yaml  AEON Snell's update _250803_064905.docx  AEON liver_250803_081320.docx  AEON scale field map_250801_224002.docx  AEON update string theory _251117_225534.docx  Aas formula _250813_160901.docx  Ai agents _250802_031043.docx  Bible 2_250903_042412.docx  Bible _250903_034843.docx  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chat summary 17112025_251117_060709.docx  Chat summary _251118_012946.docx  Chevron update _250803_035916.docx  Code hiding_250820_120957.docx  Cypher worm_250829_004121.docx  Data compression _250804_071338.docx  Everything theory _250803_065955.docx  Everything update 10 8 25_250810_071614.docx  Gpt no delete evidence rulze_251031_212307.docx  Kepler _250804_043558.docx  Kryptos cypher update 1_250803_104647.docx  Kryptos update 2_250803_110011.docx  LICENSE  Latest update for agent_250802_034541.docx  Licence commands _250803_121208.docx  Lucus formula _250829_013914.docx  Mt math_250622_021130.docx  Mt math_250622_021130.sdocx  README.md  Riemann app date_250801_212826.docx  SECURITY.md  Schrodingers_250804_045246.docx  Sound wave x_250731_040028.docx  Sound wave x_250731_040028.txt  Technosmith_251012_000903.docx  Thomas Young v1_251116_015918.docx  (+27 more)
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: automerge-dependencies.yml  ci-python.yml  ci.yml  codeql.yml  semantic-pr.yml
.hypothesis/constants/: 15f998fddd6c37c7  2d7ca5a0f7d31ecb  2ee37518841d7283  375e996620efe363  3e82ec3f36e42836  4024f0e606ed3098  48a7837425d7c95c  491b9127715c5b2b  495022fa95338713  (+25 more)
tests/: conftest.py  test_entropy.py  test_phi.py  test_sequence.py  test_smoke.py  test_ternary.py
(+5 files in other folders)
